# entity-rs

./: CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  README.md  index.html  release.toml
entity/: Cargo.toml  README.md
entity/src/: alloc.rs  any.rs  context.rs  database.rs  edge.rs  field.rs  global.rs  lib.rs  query.rs  value.rs
entity/src/database/: async.rs  inmemory.rs  mod.rs
entity/src/database/kv/: inmemory.rs  mod.rs  sled_db.rs
entity/src/database/kvstore/: inmemory.rs  mod.rs  sled_db.rs
entity/src/database/sync/: inmemory.rs  mod.rs
entity/src/ent/: edge.rs  field.rs  macro.rs  mod.rs  schema.rs  value.rs
entity/src/ent/query/: filter.rs  mod.rs  predicate.rs
entity/src/ent/query/condition/: edge.rs  field.rs  mod.rs  time.rs
entity/src/ent/value/: mod.rs  number.rs  primitive.rs  type.rs
entity/src/ext/: async_graphql.rs  mod.rs
entity/src/query/: mod.rs
entity/src/query/condition/: field.rs  mod.rs
entity_macros/: Cargo.toml  README.md
entity_macros/src/: attribute.rs  lib.rs  utils.rs
entity_macros/src/data/: enum.rs  mod.rs
entity_macros/src/data/struct/: internal.rs  mod.rs
entity_macros/src/derive/: edge.rs  ent.rs  info.rs  mod.rs  utils.rs
entity_macros/src/derive/ent/: builder.rs  edge.rs  field.rs  ient.rs  info.rs  mod.rs  query.rs
entity_macros/src/derive/ent/enum/: data.rs  ent.rs  mod.rs  query.rs  type.rs  wrapper.rs
entity_macros/src/derive/ent/struct/: async_graphql.rs  builder.rs  debug.rs  edge.rs  ent.rs  field.rs  loader.rs  mod.rs  query.rs  type.rs
entity_macros/src/derive/value/: mod.rs  named.rs  unit.rs  unnamed.rs
entity_macros/tests/: derive_ent.rs  hygiene.rs  lib.rs
entity_macros/tests/attribute/enum/: mod.rs  simple_ent.rs
entity_macros/tests/attribute/struct/: simple_ent.rs
entity_macros/tests/derive/ent/: builder.rs  ent.rs  ient.rs  mod.rs  query.rs  typed_methods.rs
entity_macros/tests/derive/enum/: ent.rs  ent_type.rs  ent_wrapper.rs  mod.rs  query.rs
entity_macros/tests/derive/struct/: async_graphql.rs  builder.rs  edge.rs  ent.rs  field.rs  loader.rs  mod.rs  query.rs
entity_macros/tests/derive/struct/async_graphql/: explicit.rs  general.rs  mod.rs  untyped.rs
entity_macros/tests/derive/struct/ent/: builder.rs  ent.rs  mod.rs  query.rs  typed_methods.rs
entity_macros/tests/derive/struct/value/: regular_struct.rs  tuple_struct.rs  unit_struct.rs
entity_macros/tests/derive/value/: mod.rs  unit_struct.rs
entity_macros/tests/hygiene/: mod.rs
entity_macros/tests/ui/attribute/: conflicting-field-named-created.rs  conflicting-field-named-created.stderr  conflicting-field-named-database.rs  conflicting-field-named-database.stderr  conflicting-field-named-id.rs  conflicting-field-named-id.stderr  conflicting-field-named-last_updated.rs  conflicting-field-named-last_updated.stderr  core-field-created-already-marked.rs  core-field-created-already-marked.stderr  core-field-database-already-marked.rs  core-field-database-already-marked.stderr  core-field-id-already-marked.rs  core-field-id-already-marked.stderr  core-field-last_updated-already-marked.rs  core-field-last_updated-already-marked.stderr  not-deriving-ent.rs  not-deriving-ent.stderr  unsupported-tuple-struct.rs  unsupported-tuple-struct.stderr  unsupported-unit-struct.rs  unsupported-unit-struct.stderr
entity_macros/tests/ui/attribute/simple_ent/: conflicting-field-named-created.rs  conflicting-field-named-created.stderr  conflicting-field-named-database.rs  conflicting-field-named-id.stderr
entity_macros/tests/ui/derive/async_graphql_ent/: unsupported-enum.rs  unsupported-union.rs
entity_macros/tests/ui/derive/async_graphql_ent_filter/: unsupported-enum.rs  unsupported-enum.stderr  unsupported-union.rs
entity_macros/tests/ui/derive/ent/: duplicate-created.rs  duplicate-created.stderr  duplicate-database.rs  duplicate-database.stderr  duplicate-id.rs  duplicate-id.stderr  duplicate-last_updated.rs  duplicate-last_updated.stderr  duplicate-multiple_fields.rs  duplicate-multiple_fields.stderr  empty-ent-attr.rs  empty-ent-attr.stderr  field-cannot-convert-to-from-value.rs  field-is-not-cloneable.rs  missing-id.rs  (+90 more)
examples/async-graphql/: Cargo.toml
examples/async-graphql/src/: main.rs
examples/sled/: Cargo.toml
examples/sled/src/: main.rs
integrations/entity-async-graphql/: Cargo.toml  README.md
integrations/entity-async-graphql-derive/: Cargo.toml
integrations/entity-async-graphql-derive/src/: data.rs  utils.rs
integrations/entity-async-graphql-derive/src/derive/: ent_filter.rs  mod.rs
integrations/entity-async-graphql-derive/tests/derive/: explicit.rs  general.rs  untyped.rs
integrations/entity-async-graphql-macros/: Cargo.toml  README.md
integrations/entity-async-graphql-macros/src/: attribute.rs  lib.rs  utils.rs
integrations/entity-async-graphql-macros/src/derive/: ent_object.rs
integrations/entity-async-graphql-macros/tests/: hygiene.rs  lib.rs
integrations/entity-async-graphql-macros/tests/attribute/: mod.rs
integrations/entity-async-graphql-macros/tests/derive/: computed.rs  explicit.rs  general.rs  mod.rs  untyped.rs
integrations/entity-async-graphql/examples/: user.rs
integrations/entity-async-graphql/src/: lib.rs
integrations/entity-async-graphql/src/ent/: edge.rs  field.rs  mod.rs  value.rs
integrations/entity-async-graphql/src/filter/: float.rs  mod.rs  primitive.rs
integrations/entity-inmemory/: Cargo.toml  README.md
integrations/entity-inmemory/examples/: user.rs
integrations/entity-inmemory/src/: lib.rs
integrations/entity-sled/: Cargo.toml  README.md
integrations/entity-sled/examples/: user.rs
integrations/entity-sled/src/: lib.rs
macros/entity_macros/: Cargo.toml
macros/entity_macros/src/: attribute.rs  lib.rs  utils.rs
macros/entity_macros/src/derive/: mod.rs
macros/entity_macros/tests/: lib.rs
macros/entity_macros_data/: Cargo.toml  README.md
macros/entity_macros_data/src/: lib.rs
macros/entity_macros_data/src/struct/: internal.rs  mod.rs
macros/entity_noop_macros/: Cargo.toml  README.md
macros/entity_noop_macros/src/: lib.rs
(+131 files in other folders)
