[package]
name = "entity"
description = "Library that provides entity-like constructs"
categories = ["data-structures"]
version = "0.2.0"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"
homepage = "https://github.com/chipsenkbeil/entity-rs"
repository = "https://github.com/chipsenkbeil/entity-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"

[features]
full = ["async-graphql", "global", "macros", "inmemory_db", "serde-1", "sled_db"]
global = ["lazy_static"]
inmemory_db = []
macros = ["entity_macros"]
serde-1 = ["serde", "serde/rc", "typetag"]
sled_db = ["bincode", "serde-1", "sled"]

[dependencies]
derivative = "2.1.1"
derive_more = { version = "0.99.11", default-features = false, features = ["as_ref", "as_mut", "constructor", "deref", "deref_mut", "display", "error", "from", "into", "into_iterator", "try_into"] }
doc-comment = "0.3.3"
dyn-clone = "1.0.3"
paste = "1.0.4"
strum = { version = "0.19", features = ["derive"] }
entity_noop_macros = { version = "0.1.0", path = "../entity_noop_macros" }

async-graphql = { version = "2.4.6", optional = true }
bincode = { version = "1.3.1", optional = true }
lazy_static = { version = "1.4.0", optional = true }
serde = { version = "1.0.117", features = ["derive"], optional = true }
sled = { version = "0.34.6", optional = true }
typetag = { version = "0.1.6", optional = true }
entity_macros = { version = "0.2.0", path = "../entity_macros", optional = true }

[dev-dependencies]
futures = "0.3.9"
