[package]
name = "entity_macros"
description = "Macro library that provides ability to derive ent logic at compile-time."
categories = ["data-structures"]
version = "0.1.0"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"
homepage = "https://github.com/chipsenkbeil/entity-rs"
repository = "https://github.com/chipsenkbeil/entity-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
heck = "0.3.1"
proc-macro2 = "1.0.24"
quote = "1.0.7"
syn = { version = "1.0.53", features = ["full"] }

[dev-dependencies]
entity = { version = "0.1.0", path = "../entity", features = ["macros"] }
serde = { version = "1.0.117", features = ["derive"] }
typetag = { version = "0.1.6" }
