[package]
name = "entity_macros"
description = "Macro library that provides ability to generate ent logic at compile-time."
categories = ["data-structures"]
version = "0.1.0"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"
homepage = "https://github.com/chipsenkbeil/entity-rs"
repository = "https://github.com/chipsenkbeil/entity-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
darling = "0.11.0"
heck = "0.3.1"
proc-macro2 = "1.0.24"
proc-macro-crate = "0.1.5"
quote = "1.0.7"
syn = { version = "1.0.53", features = ["full"] }

[dev-dependencies]
derivative = "2.1.1"
entity = { version = "0.1.0", path = "../entity", features = ["macros"] }
trybuild = "1.0.35"
