[package]
name = "entity_macros"
description = "Macro library that provides ability to generate ent logic at compile-time."
categories = ["data-structures"]
version = "0.1.0"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"
homepage = "https://github.com/chipsenkbeil/entity-rs"
repository = "https://github.com/chipsenkbeil/entity-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
darling = "0.12.0"
heck = "0.3.1"
proc-macro2 = "1.0.24"
proc-macro-crate = "0.1.5"
quote = "1.0.7"
syn = { version = "1.0.53", features = ["full"] }

[dev-dependencies]
async-graphql = "2.4.6"
derivative = "2.1.1"
entity = { version = "0.1.0", path = "../entity", default-features = false, features = ["async-graphql", "global", "inmemory_db", "macros"] }
futures = "0.3.9"
rustversion = "1.0.4"
serde_json = "1.0.61"
trybuild = "1.0.35"
