[package]
name = "async-graphql-example"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
entity = { version = "=0.2.5", path = "../..", features = ["global", "macros"] }
entity-inmemory = { version = "=0.2.5", path = "../../integrations/entity-inmemory" }
entity-async-graphql = { version = "=0.2.5", path = "../../integrations/entity-async-graphql", features = ["derive"] }

async-graphql = "2.4.6"
futures = "0.3.9"
serde_json = "1.0"
