[package]
name = "entity-async-graphql"
description = "Support to integration async-graphql into entity crate."
version = "0.4.0"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"
homepage = "https://github.com/chipsenkbeil/entity-rs"
repository = "https://github.com/chipsenkbeil/entity-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"

[features]
macros = ["entity-async-graphql-macros"]

[[example]]
name = "user"
required-features = ["macros", "entity/global", "entity/macros"]

[dependencies]
entity = { version = "0.4.0", path = "../.." }
entity-async-graphql-macros = { version = "0.4.0", path = "../entity-async-graphql-macros", optional = true }

async-graphql = { version = "^4.0.15" }
derive_more = { version = "0.99.11", default-features = false, features = ["from", "into"] }
paste = "1.0.4"

[dev-dependencies]
entity-inmemory = { version = "=0.4.0", path = "../entity-inmemory" }
entity-sled = { version = "=0.4.0", path = "../entity-sled" }

futures = "0.3.9"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.61"
sled = "0.34.6"
typetag = "0.1.6"
