[package]
name = "entity-inmemory"
description = "Custom inmemory database for entity crate."
version = "0.3.1"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"
homepage = "https://github.com/chipsenkbeil/entity-rs"
repository = "https://github.com/chipsenkbeil/entity-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"

[features]
serde-1 = ["serde", "serde/rc", "entity/serde-1"]

[dependencies]
entity = { version = "=0.3.1", path = "../.." }

dyn-clone = "1.0.3"
serde = { version = "1.0.117", features = ["derive"], optional = true }

[dev-dependencies]
entity = { version = "=0.3.1", path = "../..", features = ["global", "macros"] }
typetag = { version = "0.1.6" }
