[package]
name = "entity-sled"
version = "0.4.0"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"

[dependencies]
entity = { version = "=0.4.0", path = "../..", features = ["serde-1"] }

bincode = "1.3.1"
sled = "0.34.6"

[dev-dependencies]
entity = { version = "=0.4.0", path = "../..", features = ["global", "macros"] }
serde = { version = "1.0.117", features = ["derive"] }
typetag = { version = "0.1.6" }
