[package]
name = "entity-sled"
description = "Sled database support for entity crate."
version = "0.4.0"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"
homepage = "https://github.com/chipsenkbeil/entity-rs"
repository = "https://github.com/chipsenkbeil/entity-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
entity = { version = "0.4.0", path = "../..", features = ["serde-1"] }

bincode = "1.3.1"
sled = "0.34.6"

[dev-dependencies]
entity = { version = "0.4.0", path = "../..", features = ["global", "macros"] }
serde = { version = "1.0.117", features = ["derive"] }
typetag = { version = "0.1.6" }
