[package]
name = "entity_macros"
description = "Macro library that provides ability to generate ent logic at compile-time."
categories = ["data-structures"]
version = "0.3.0"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"
homepage = "https://github.com/chipsenkbeil/entity-rs"
repository = "https://github.com/chipsenkbeil/entity-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
darling = "0.12.0"
heck = "0.3.1"
proc-macro2 = "1.0.24"
proc-macro-crate = "1.0.0"
quote = "1.0.7"
syn = { version = "1.0.53", features = ["full"] }
entity_macros_data = { version = "=0.3.0", path = "../entity_macros_data" }

[dev-dependencies]
entity = { version = "=0.3.0", path = "../..", default-features = false, features = ["global", "macros"] }
entity-inmemory = { version = "=0.3.0", path = "../../integrations/entity-inmemory" }

derivative = "2.1.1"
futures = "0.3.9"
rustversion = "1.0.4"
serde_json = "1.0.61"
trybuild = "1.0.35"
