[package]
name = "entity_macros_data"
description = "Companion library for entity_macros that provides data structures that describe ents"
categories = ["data-structures"]
version = "0.3.3"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"
homepage = "https://github.com/chipsenkbeil/entity-rs"
repository = "https://github.com/chipsenkbeil/entity-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
darling = "0.12.0"
heck = "0.3.1"
quote = "1.0.7"
syn = { version = "1.0.53", features = ["full"] }
