[package]
name = "entity_noop_macros"
description = "Macro library that provides noop macros for entity re-exports"
version = "0.2.5"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
edition = "2018"
homepage = "https://github.com/chipsenkbeil/entity-rs"
repository = "https://github.com/chipsenkbeil/entity-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true
